09 | 指定搜索路径: configparser读取配置文件

--- a/python_productivity/search.ini
+++ b/python_productivity/search.ini
@@ -1,7 +1,8 @@
 [work]
-;工作文件保存路径
-searchpath=/Users/edz,/tmp
+;work dir
+searchpath=E:/Projects/PythonPractice/python_productivity/,/tmp
+;searchpath=/Users/edz,/tmp
 
 [game]
-;娱乐文件保存路径
+;entertainment dir
 searchpath=/games,/movies,/music
